// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`followers DELETE /api/profiles/:username/follow when the user is authenticated and the user is not followed should return a not found error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": {
          "headers": {},
          "payload": {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;

exports[`followers DELETE /api/profiles/:username/follow when the user is authenticated and the user to unfollow is found should unfollow the user to unfollow 1`] = `
{
  "body": {
    "profile": {
      "bio": "Microbiologist",
      "following": false,
      "image": "//www.gravatar.com/avatar/558fb2b020a9a4f802d73e42810f6618",
      "username": "sago",
    },
  },
  "status": 200,
}
`;

exports[`followers DELETE /api/profiles/:username/follow when the user is authenticated and the user to unfollow is not found should return a not found error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": {
          "headers": {},
          "payload": {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;

exports[`followers DELETE /api/profiles/:username/follow when the user is not authenticated should return an unauthorized error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": {
          "headers": {},
          "payload": {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;

exports[`followers POST /api/profiles/:username/follow when the user is authenticated and the user is already followed should return an unprocessable entity error 1`] = `
{
  "body": {
    "errors": {
      "follower": [
        "is already following this user",
      ],
    },
  },
  "status": 422,
}
`;

exports[`followers POST /api/profiles/:username/follow when the user is authenticated and the user to follow is found should follow the user to follow 1`] = `
{
  "body": {
    "profile": {
      "bio": "Chief Medical Officer",
      "following": true,
      "image": "//www.gravatar.com/avatar/4bdd6542a6dbc1d204b4cdab46221aed",
      "username": "soh",
    },
  },
  "status": 200,
}
`;

exports[`followers POST /api/profiles/:username/follow when the user is authenticated and the user to follow is not found should return a not found error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": {
          "headers": {},
          "payload": {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;

exports[`followers POST /api/profiles/:username/follow when the user is not authenticated should return an unauthorized error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": {
          "headers": {},
          "payload": {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;
